--- a/IndexStyle.css
+++ b/IndexStyle.css
@@ -843,3 +843,8 @@ canvas {
     margin-bottom: 5px;
 
 }
+@media screen and (max-width: 600px) {
+    #wish-text {
+      font-size: 40px; 
+    }
+  }
